# python-project-49

./: .gitignore  Makefile  README.md  hello.py  index.html  pyproject.toml  style.css  test.js
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  constants.py  core.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
