[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games"
authors = [
    { name="Oksana Aleksandrova, email="oksanalex98@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main_script"
brain-gcd = "brain_games.scripts.brain_gcd:main_script"
brain-progression = "brain_games.scripts.brain_progression:main_script"
brain-calc = "brain_games.scripts.brain_calc:main_script"
brain-prime = "brain_games.scripts.brain_prime:main_script"

